Add projects section

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,19 @@
   <h3>
     About Me
   </h3>
-  <p>
-    I am a PhD student at MPI-SWS in the group for <b>Automated Verification and Approximation</b> lead by Eva Darulova.
-  </p>
+  <div class="card">
+    <div class="card-content">
+      <p>
+        I am a PhD student at MPI-SWS in the group for <em>Automated Verification
+          and Approximation</em> lead by Eva Darulova. In general I have a strong
+        interest in static analysis and compilers, with a strong focus on
+        verification.
+      </p>
+      <p>
+        We are currently working on building a certification backend for her
+        previous work in the Daisy framework. To this end we implement a checker for
+        Daisy's results in both Coq and HOL4. The overall goal for our project is to
+        support certification of analysis results computed by Daisy.
+      </p>
+    </div>
+  </div>
