--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,7 +7,31 @@
     <div class="row">
       {% include sidebar.html %}
 
-      {% include main.html %}
+      <div class="col l8 s12">
+        <div class="row">
+          {% include about.html %}
+        </div>
+        <div class="divider">
+        </div>
+        <div class="row">
+          {% include projects.html %}
+        </div>
+        <div class="divider">
+        </div>
+        <div class="row">
+          {% include education.html %}
+        </div>
+        <div class="divider">
+        </div>
+        <div class="row">
+          {% include publications.html %}
+        </div>
+        <div class="divider">
+        </div>
+        <div class="row">
+          {% include talks.html %}
+        </div>
+      </div>
     </div>
   </body>
 </html>
