Add teaching section

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,6 +24,11 @@
         <div class="divider">
         </div>
         <div class="row">
+          {% include teaching.html %}
+        </div>
+        <div class="divider">
+        </div>
+        <div class="row">
           {% include publications.html %}
         </div>
         <div class="divider">
