Fix sidebar link

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@
       <a href="mailto:hbecker _at_ mpi-sws.org">
         <i class="fas fa-at fa-2x"></i>
       </a>
-      <a href="https://hbecker.github.io">
+      <a href="https://heikobecker.github.io">
         <i class="fab fa-github fa-2x"></i>
         </a>
         </p>
