Update to use relative paths

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,9 +1,12 @@
-  <div class="col l3 s12">
+  <div class="col l3 m12 s12">
     <!-- TODO Color -->
     <div class="">
+      <!-- push a little down -->
       <div class="row">
-        <div class="col l6 offset-l3">
-          <img class="responsive-img" src="{{site.baseurl}}/assets/avatar.jpg" alt="profile picture" />
+      </div>
+      <div class="row">
+        <div class="col push-l3 push-m3 push-s3 s6 m6 l6">
+          <img class="responsive-img" src="assets/avatar.jpg" alt="profile picture" />
         </div>
       </div>
       <h1 class="center-align"> {{site.name}} </h1>
