--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,7 @@
     <link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
     <!--Import Google Icon Font-->
     <link href="assets/materialize/fonts/" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="assets/materialize/css/materialize.min.css">
     <!--Let browser know website is optimized for mobile-->
