Add a news part at the top, to highlight seminar, add infos

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,9 +5,9 @@
     <div class="card-content">
       <p>
         I am a PhD student at MPI-SWS in the group for <em>Automated Verification
-          and Approximation</em> lead by Eva Darulova. In general I have a strong
-        interest in static analysis and compilers, with a strong focus on
-        verification.
+          and Approximation</em> lead by <a href="https://people.mpi-sws.org/~eva">Eva Darulova</a>.
+        In general I have a strong interest in static analysis and compilers, with a strong focus on
+        correctness guarantees and verification of both analysis and compiler.
       </p>
       <p>
         We are currently working on building a certification backend for her
