--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,6 +9,11 @@
 
       <div class="col l8 s12">
         <div class="row">
+          {% include news.html %}
+        </div>
+        <div class="divider">
+        </div>
+        <div class="row">
           {% include about.html %}
         </div>
         <div class="divider">
@@ -19,12 +24,12 @@
         <div class="divider">
         </div>
         <div class="row">
-          {% include education.html %}
+          {% include teaching.html %}
         </div>
         <div class="divider">
         </div>
         <div class="row">
-          {% include teaching.html %}
+          {% include education.html %}
         </div>
         <div class="divider">
         </div>
