--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,39 +8,7 @@
       {% include sidebar.html %}
 
       <div class="col l8 s12">
-        <div class="row">
-          {% include news.html %}
-        </div>
-        <div class="divider">
-        </div>
-        <div class="row">
-          {% include about.html %}
-        </div>
-        <div class="divider">
-        </div>
-        <div class="row">
-          {% include projects.html %}
-        </div>
-        <div class="divider">
-        </div>
-        <div class="row">
-          {% include teaching.html %}
-        </div>
-        <div class="divider">
-        </div>
-        <div class="row">
-          {% include education.html %}
-        </div>
-        <div class="divider">
-        </div>
-        <div class="row">
-          {% include publications.html %}
-        </div>
-        <div class="divider">
-        </div>
-        <div class="row">
-          {% include talks.html %}
-        </div>
+      {% include main.html %}
       </div>
     </div>
   </body>
