--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -1,15 +1,18 @@
   <h3>
-    Talks
+    Other Talks
   </h3>
-  <p>
-    <ul>
-      {% for talk in site.data.talks %}
-      <li>
+  {% for talk in site.data.talks %}
+  <div class="card">
+    <div class="card-content">
+      <span class="card-title">
         {% if talk.link %}
         <a href="{{talk.link}}">
-          {{ talk.title }}
+        {% endif %}
+        {{ talk.title }}
+        {% if talk.link %}
         </a>
         {% endif %}
-      {% endfor %}
-    </ul>
-  </p>
+        </span>
+    </div>
+  </div>
+  {% endfor %}
