Start drafting a blog structure

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -32,6 +32,11 @@
                 </ul>
               </div>
             </div>
+            <!--
+            <div class="card">
+              <a href="/blog">Blog</a>
+            </div>
+            -->
             <!-- <div class="card "> -->
             <!--   <div class="card-content"> -->
             <!--     <span class="card-title">Free-time activities</span> -->
