--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,7 @@
         <a href="https://people.mpi-sws.org/~eva">Eva Darulova</a>.
         In general I have a strong interest in static analysis and compilers for
         finite-precision programs.
-        For these tools I main focus is on establishing rigorous correctness
+        For these tools my main focus is on establishing rigorous correctness
         proofs for their behaviours.
       </p>
       <p>
