Add a draft for a blog structure

--- a/_includes/head_post.html
+++ b/_includes/head_post.html
@@ -12,5 +12,9 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="../../assets/materialize/js/materialize.min.js"></script>
+    <!-- Mathjax Support -->
+    <script type="text/javascript" async
+      src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+    </script>
     <title>Heiko Becker</title>
 </head>
