--- a/_layouts/post_template.html
+++ b/_layouts/post_template.html
@@ -11,9 +11,9 @@
           <h1>
             {{ page.title | escape }}
           </h1>
-          <p>
-            {{ page.content }}
-          </p>
+            <div class="flow-text">
+              {{ page.content }}
+            </div>
         </div>
       </div>
     </div>
