Restructure includes to simplify doc structure

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
       </div>
       <div class="row">
         <div class="col push-l3 push-m3 push-s3 s6 m6 l6">
-          <img class="responsive-img" src="assets/avatar.jpg" alt="profile picture" />
+          <img class="responsive-img" src="{{site.url}}/{{site.baseurl}}assets/avatar.jpg" alt="profile picture" />
         </div>
       </div>
       <h1 class="center-align"> {{site.name}} </h1>
