--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,10 +1,12 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 
-  {% include head_blog.html %}
+  {% include head.html %}
 
   <body class="grey lighten-3">
     <div class="row">
+
+      {% include sidebar.html %}
 
       <div class="col l8 s12">
         <ul>
@@ -16,5 +18,6 @@
         </ul>
       </div>
     </div>
+    {% include footer.html %}
   </body>
 </html>
