--- a/_layouts/post_template.html
+++ b/_layouts/post_template.html
@@ -1,21 +1,23 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 
-  {% include head_post.html %}
+  {% include head.html %}
 
   <body class="grey lighten-3">
-    <div class="container">
-      <div class="row">
-        <div class="col l12 s12">
-          <div class="card card-panel">
+    <div class="row">
+
+      {% include sidebar.html %}
+
+      <div class="col l8 s12">
+        <div class="card card-panel">
           <h1>
             {{ page.title | escape }}
           </h1>
-            <div class="flow-text">
-              {{ page.content }}
-            </div>
+          <div class="flow-text">
+            {{ page.content }}
+          </div>
         </div>
       </div>
-    </div>
+      {% include footer.html %}
   </body>
 </html>
