--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,19 +2,21 @@
     <!-- Font Awesome Icons -->
     <link href="https://use.fontawesome.com/releases/v5.0.4/css/all.css" rel="stylesheet">
     <!--Import Google Icon Font-->
-    <link href="{{site.url}}/{{site.baseurl}}assets/materialize/fonts/" rel="stylesheet">
+    <link href="{{site.baseurl}}/assets/materialize/fonts/" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="{{site.url}}/{{site.baseurl}}assets/materialize/css/materialize.min.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/assets/materialize/css/materialize.min.css">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
       <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <!-- Compiled and minified JavaScript -->
-    <script src="{{site.url}}/{{site.baseurl}}assets/materialize/js/materialize.min.js"></script>
+    <script src="{{site.baseurl}}/assets/materialize/js/materialize.min.js"></script>
     <!-- Mathjax Support -->
     <script type="text/javascript" async
       src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
     </script>
+    <link rel="alternate" type="application/rss+xml"  href="{{ site.baseurl }}/feed.xml" title="{{ site.title }}">
+    <meta charset="utf-8">
     <title>Heiko Becker</title>
 </head>
