--- a/_includes/main.html
+++ b/_includes/main.html
@@ -1,6 +1,6 @@
-  <div class="row">
+  <!-- <div class="row">
     {% include news.html %}
-  </div>
+  </div> -->
   <div class="divider">
   </div>
   <div class="row">
