--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,51 +1,37 @@
-  <div class="col l3 m12 s12">
-    <!-- TODO Color -->
-    <div class="">
-      <!-- push a little down -->
-      <div class="row">
-      </div>
-      <div class="row">
-        <div class="col push-l3 push-m3 push-s3 s6 m6 l6">
-          <img class="responsive-img" src="{{site.url}}/{{site.baseurl}}assets/avatar.jpg" alt="profile picture" />
-        </div>
-      </div>
-      <h1 class="center-align"> {{site.name}} </h1>
-      <h2 class="center-align"> PhD Student </h2>
-      <p class="center-align">
-      <a href="mailto:hbecker _at_ mpi-sws.org">
-        <i class="fas fa-at fa-2x"></i>
-      </a>
-      <a href="https://heikobecker.github.io">
-        <i class="fab fa-github fa-2x"></i>
-        </a>
-        </p>
-      <div class="container">
-        <div class="row">
-          <div class="col s12">
-            <div class="card ">
-              <div class="card-content ">
-                <span class="card-title">Language Skills</span>
-                <ul>
-                  <li> German: Native Speaker</li>
-                  <li> English: Professional </li>
-                  <li> French: Medium </li>
-                </ul>
-              </div>
-            </div>
-            <!--
-            <div class="card">
-              <a href="/blog">Blog</a>
-            </div>
-            -->
-            <!-- <div class="card "> -->
-            <!--   <div class="card-content"> -->
-            <!--     <span class="card-title">Free-time activities</span> -->
-            <!--     <ul> -->
-            <!--     </ul> -->
-            <!--   </div> -->
-            <!-- </div> -->
+<!-- TODO Color -->
+<div class="">
+  <!-- push a little down -->
+  <div class="row">
+  </div>
+  <div class="row">
+    <div class="col push-l3 push-m3 push-s3 s6 m6 l6">
+      <img class="responsive-img" src="{{site.baseurl}}/assets/avatar.jpg" alt="profile picture" />
+    </div>
+  </div>
+  <h1 class="center-align">{{site.name}}</h1>
+  <h2 class="center-align"> PhD Student </h2>
+  <p class="center-align">
+  <a href="mailto:hbecker _at_ mpi-sws.org">
+    <i class="fas fa-at fa-2x"></i>
+  </a>
+  <a href="https://heikobecker.github.io">
+    <i class="fab fa-github fa-2x"></i>
+  </a>
+  </p>
+  <div class="container">
+    <div class="row">
+      <div class="col s12">
+        <div class="card ">
+          <div class="card-content">
+            <span class="card-title">Language Skills</span>
+            <ul>
+              <li> German: Native Speaker</li>
+              <li> English: Professional </li>
+              <li> French: Medium </li>
+            </ul>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
