--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,3 +1,9 @@
+---
+reachable:
+  - url: blog
+    name: <i class="far fa-file-alt fa-2x"></i>
+---
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 
@@ -5,9 +11,22 @@
 
   <body class="grey lighten-3">
     <div class="row">
-      {% include sidebar.html %}
-
+      <div class="col l3 m12 s12">
+        {% include sidebar.html %}
+      </div>
       <div class="col l8 s12">
+        <div class="row">
+          <div class="col offset-s1 s2">
+            <h4>
+              <a href="{{ site.baseurl }}" class="blue-text text-darken-2">Home</a>
+            </h4>
+          </div>
+          <div class="col s2">
+            <h4>
+              <a href="{{ site.baseurl }}/blog" class="blue-text text-darken-2">Blog</a>
+            </h4>
+          </div>
+        </div>
       {% include main.html %}
       </div>
     </div>
