--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -40,6 +40,11 @@ reachable:
           </li>
           {% endfor %}
         </ul>
+        <p class="right-align">
+          <a href="{{site.baseurl}}/feed.xml">
+            <i class="fas fa-rss-square fa-2x"></i>
+          </a>
+        </p>
       </div>
       </div>
     </div>
