Fix typo and layout problems

--- a/_layouts/post_template.html
+++ b/_layouts/post_template.html
@@ -30,10 +30,10 @@ reachable:
           </div>
         </div>
         <div class="card card-panel">
-          <h3>
+          <h1>
             {{ page.title | escape }}
-          </h3>
-          <div class="">
+          </h1>
+          <div class="text">
             {{ page.content }}
           </div>
         </div>
