--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,7 +1,7 @@
 ---
 reachable:
-  - url: ""
-    name: <i class="fas fa-home fa-2x"></i>
+- url: ""
+name: <i class="fas fa-home fa-2x"></i>
 ---
 
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
@@ -27,25 +27,28 @@ reachable:
             </h4>
           </div>
         </div>
-      <div class="divider">
-      </div>
-      <div>
-        <ul class="collection">
+        <div class="divider">
+        </div>
+        <div>
           {% for post in site.posts %}
-          <li class="collection-item">
-            <a href="{{site.baseurl}}{{ post.url }}"><h4>{{ post.title }}</h4></a> {{ post.date | date: "%d. %B %Y"}}
-            <p>
-              {{ post.excerpt }}
-            </p>
-          </li>
+          <div class="card">
+            <div class="card-content">
+              <span class="card-title">
+                <a href="{{site.baseurl}}{{ post.url }}"><h4>{{ post.title }}</h4></a>
+                {{ post.date | date: "%d. %B %Y"}}
+              </span>
+              <div class="text">
+                {{ post.excerpt }}
+              </div>
+            </div>
+          </div>
           {% endfor %}
-        </ul>
-        <p class="right-align">
-          <a href="{{site.baseurl}}/feed.xml">
-            <i class="fas fa-rss-square fa-2x"></i>
-          </a>
-        </p>
-      </div>
+          <p class="right-align">
+            <a href="{{site.baseurl}}/feed.xml">
+              <i class="fas fa-rss-square fa-2x"></i>
+            </a>
+          </p>
+        </div>
       </div>
     </div>
     {% include footer.html %}
