Fix typos, remove unused code

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,7 +10,7 @@
         In general I have a strong interest in static analysis and compilers for
         finite-precision programs.
         For these tools my main focus is on establishing rigorous correctness
-        proofs for their behaviours.
+        proofs of their behaviours.
       </p>
       <p>
         We are currently working on verified compilation of floating-point
@@ -20,10 +20,11 @@
       </p>
       <p>
         In a second project we worked on building a certification backend for my
-        supervisors previous work in the Daisy framework. To this end we
-        implement a checker for Daisy's results in both Coq and HOL4. The
-        overall goal for the project is to support certification of analysis
-        results computed by Daisy.
+        supervisors previous work in the
+        <a href="https://github.com/malyzajko/daisy">Daisy</a> framework. We
+        have developed a checker for Daisy's results in both Coq and HOL4.
+        The checker certifies correctness for a single run of the Daisy static
+        analyzer.
       </p>
     </div>
   </div>
