--- a/_includes/teaching.html
+++ b/_includes/teaching.html
@@ -6,12 +6,16 @@
     <div class="card">
       <div class="card-content">
         <span class="card-title">
-          {% unless teach.end %}
-          Since
-          {% endunless %}
-          {{teach.start}}
-          {% if teach.end %}
-          - {{teach.end}}
+          {% if teach.when %}
+            {{ teach.when }}
+          {% else %}
+            {% unless teach.end %}
+            Since
+            {% endunless %}
+            {{teach.start}}
+            {% if teach.end %}
+            - {{teach.end}}
+            {% endif %}
           {% endif %}
         </span>
         <p>
