Add twitter handle to sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,10 +12,13 @@
   <h2 class="center-align"> PhD Student </h2>
   <p class="center-align">
   <a href="mailto:hbecker _at_ mpi-sws.org">
-    <i class="fas fa-at fa-2x"></i>
+    <i class="fas fa-at fa-3x"></i>
+  </a>
+  <a href="https://twitter.com/HeyHeiko">
+    <i class="fab fa-twitter fa-3x"></i>
   </a>
   <a href="https://heikobecker.github.io">
-    <i class="fab fa-github fa-2x"></i>
+    <i class="fab fa-github fa-3x"></i>
   </a>
   </p>
   <div class="container">
