Clean up links, update with newest information

--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,9 +1,8 @@
-<h3> News </h3>
-<p>
-  <div class="card">
-    <div class="card-content">
-      In the summer term 2019 I will be TAing for a seminar on advanced program analysis with <a href="https://people.mpi-sws.org/~dlohar">Debasmita Lohar</a> and <a href="https://people.mpi-sws.org/~haidang">Hai Dang</a>.
-      Please register at <a href="https://people.mpi-sws.org/~eva/courses/programAnalysis19/">the webpage</a>.
-    </div>
+<div class="card">
+  <div class="card-content">
+    <span class="card-title"><b>News</b></span>
+    I visited the team <a href="https://www.ls2n.fr/equipe/ogre/">OGRE</a> from LS2N at Universit&eacute; de Nantes, and
+    team <a href="https://vals.lri.fr/">VALS</a> at LRI to present our work on Icing and FloVer.
+    The talk slides can be found online (<a href="https://calendar.mpi-sws.org/index.php/s/T8HAD4DdEC6AfdS">link</a>).
   </div>
-</p>
+</div>
