--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -18,6 +18,11 @@
         <br>
         <i>{{publication.conference}}</i>; {{publication.year}}
         <span class="right">
+          {% if publication.video %}
+          <a class="waves-effect waves-light btn" href="{{ publication.video }}">
+            Video
+          </a>
+          {% endif %}
           {% if publication.slides %}
           <a class="waves-effect waves-light btn" href="{{ publication.slides }}">
             Slides
