--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,12 +21,21 @@
     <i class="fab fa-github fa-3x"></i>
   </a>
   </p>
+  <!-- -->
+  <div class="container">
+    <div class="row">
+      <div class="col s12">
+      {% include news.html %}
+      </div>
+    </div>
+  </div>
+  <!-- -->
   <div class="container">
     <div class="row">
       <div class="col s12">
         <div class="card ">
           <div class="card-content">
-            <span class="card-title">Language Skills</span>
+            <span class="card-title"><b>Language Skills</b></span>
             <ul>
               <li> German: Native Speaker</li>
               <li> English: Professional </li>
