Add FPTalks talk

--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,8 +1,8 @@
 <div class="card">
   <div class="card-content">
     <span class="card-title"><b>News</b></span>
-    I visited the team <a href="https://www.ls2n.fr/equipe/ogre/">OGRE</a> from LS2N at Universit&eacute; de Nantes, and
-    team <a href="https://vals.lri.fr/">VALS</a> at LRI to present our work on Icing and FloVer.
-    The talk slides can be found online (<a href="https://calendar.mpi-sws.org/index.php/s/T8HAD4DdEC6AfdS">link</a>).
+    I gave a talk at <a href="https://fpbench.org/talks/fptalks20.html">FPTalks 2020</a>.
+    The recording is available on YouTube (<a href="https://youtu.be/pS5JWndz7tM">https://youtu.be/pS5JWndz7tM</a>)
+    and the slides can be found online (<a href="https://cloud.mpi-sws.org/index.php/s/9rFynwwm4PY2PDS"> link</a>).
   </div>
 </div>
