--- a/_includes/talks.html
+++ b/_includes/talks.html
@@ -1,18 +1,25 @@
-  <h3 id="talks">
-    Other Talks
-  </h3>
-  {% for talk in site.data.talks %}
-  <div class="card">
-    <div class="card-content">
-      <span class="card-title">
-        {% if talk.link %}
-        <a href="{{talk.link}}">
+<h3 id="talks">
+  Other Talks
+</h3>
+{% for talk in site.data.talks %}
+<div class="card">
+  <div class="card-content">
+    <span class="card-title">
+      {% if talk.link %}
+      <a href="{{talk.link}}">
         {% endif %}
         {{ talk.title }}
         {% if talk.link %}
+      </a>
+      {% endif %}
+      <span class="right">
+        {% if talk.video %}
+        <a class="waves-effect waves-light btn" href="{{ talk.video }}">
+          Video
         </a>
         {% endif %}
-        </span>
-    </div>
+      </span>
+    </span>
   </div>
-  {% endfor %}
+</div>
+{% endfor %}
