--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,10 +1,1 @@
-<blockquote class="twitter-tweet" data-dnt="true"><p lang="en" dir="ltr">Our 23 minute presentation for our CPP paper &quot;Lassie: HOL4 tactics by Example&quot; is now available on YouTube: <a href="https://t.co/ELq2lPzAN5">https://t.co/ELq2lPzAN5</a><br>We also have a pre-print of the paper available on arxiv: <a href="https://t.co/zauM6sfwzx">https://t.co/zauM6sfwzx</a><br>If you want to chat about the paper or the talk, let me know!</p>&mdash; HeikoBecker (@HeyHeiko) <a href="https://twitter.com/HeyHeiko/status/1348577144356671488?ref_src=twsrc%5Etfw">January 11, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-<!--
-<div class="card">
-  <div class="card-content">
-    <span class="card-title"><b>News</b></span>
-    I gave a talk at <a href="https://fpbench.org/talks/fptalks20.html">FPTalks 2020</a>.
-    The recording is available on YouTube (<a href="https://youtu.be/pS5JWndz7tM">https://youtu.be/pS5JWndz7tM</a>)
-    and the slides can be found online (<a href="https://cloud.mpi-sws.org/index.php/s/9rFynwwm4PY2PDS"> link</a>).
-  </div>
-</div> -->
+<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Super excited that as of yesterday CakeML can optimize floating-point programs with accuracy proofs: <a href="https://t.co/XR50aSSAEN">https://t.co/XR50aSSAEN</a><br>The code is the implementation for our <a href="https://twitter.com/ECOOPconf?ref_src=twsrc%5Etfw">@ECOOPconf</a> paper &quot;Verified Compilation and Optimization of Floating-Point Programs in CakeML&quot;</p>&mdash; Heiko Becker (@HeyHeiko) <a href="https://twitter.com/HeyHeiko/status/1529343864087138305?ref_src=twsrc%5Etfw">May 25, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
