Add thesis to webpage

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,24 +7,9 @@
         I am a PhD student at MPI-SWS in the group for <em>Automated Verification
           and Approximation</em> lead by
         <a href="https://people.mpi-sws.org/~eva">Eva Darulova</a>.
-        In general I have a strong interest in static analysis and compilers for
-        finite-precision programs.
-        For these tools my main focus is on establishing rigorous correctness
-        proofs of their behaviours.
-      </p>
-      <p>
-        We are currently working on verified compilation of floating-point
-        programs in the presence of optimizing compilers.
-        So far we have designed a new semantics called Icing that is able
-        to model floating-point optimizations in a verified compiler.
-      </p>
-      <p>
-        In a second project we worked on building a certification backend for my
-        supervisors previous work in the
-        <a href="https://github.com/malyzajko/daisy">Daisy</a> framework. We
-        have developed a checker for Daisy's results in both Coq and HOL4.
-        The checker certifies correctness for a single run of the Daisy static
-        analyzer.
+        In general I have a strong interest in verified compilation and
+        optimization of floating-point programs, and in ergonomics of
+        interactive theorem provers.
       </p>
     </div>
   </div>
