--- a/_includes/news.html
+++ b/_includes/news.html
@@ -1,1 +1,11 @@
+<div class="card">
+  <div class="card-content">
+    <span class="card-title"><b>Thesis</b></span>
+    <p>
+      I am writing up my PhD thesis and a draft of the final submission is available
+      <a href="/assets/thesis.pdf">online</a>
+    </p>
+  </div>
+</div>
+
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Super excited that as of yesterday CakeML can optimize floating-point programs with accuracy proofs: <a href="https://t.co/XR50aSSAEN">https://t.co/XR50aSSAEN</a><br>The code is the implementation for our <a href="https://twitter.com/ECOOPconf?ref_src=twsrc%5Etfw">@ECOOPconf</a> paper &quot;Verified Compilation and Optimization of Floating-Point Programs in CakeML&quot;</p>&mdash; Heiko Becker (@HeyHeiko) <a href="https://twitter.com/HeyHeiko/status/1529343864087138305?ref_src=twsrc%5Etfw">May 25, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
