--- a/_includes/news.html
+++ b/_includes/news.html
@@ -8,4 +8,12 @@
   </div>
 </div>
 
-<blockquote class="twitter-tweet"><p lang="en" dir="ltr">Super excited that as of yesterday CakeML can optimize floating-point programs with accuracy proofs: <a href="https://t.co/XR50aSSAEN">https://t.co/XR50aSSAEN</a><br>The code is the implementation for our <a href="https://twitter.com/ECOOPconf?ref_src=twsrc%5Etfw">@ECOOPconf</a> paper &quot;Verified Compilation and Optimization of Floating-Point Programs in CakeML&quot;</p>&mdash; Heiko Becker (@HeyHeiko) <a href="https://twitter.com/HeyHeiko/status/1529343864087138305?ref_src=twsrc%5Etfw">May 25, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<div class="card">
+  <div class="card-content">
+    <span class="card-title"><b>Latest Tweets</b></span>
+    <p>
+      Here, I would have shown you my latests twitter post, but I cannot include external sources on my official website.
+      You can find a copy of this site, with the tweet at <a href="https://heikobecker.github.io">heikobecker.github.io</a>
+    </p>
+  </div>
+</div>
