--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,8 +2,7 @@
     <!-- Font Awesome Icons -->
     <link href="https://cdn.mpi-klsb.mpg.de/fontawesome/fontawesome-free-5.15.4-web/css/all.css" rel="stylesheet">
     <!--Import Google Icon Font-->
-    <link href="{{site.baseurl}}/assets/materialize/fonts/" rel="stylesheet">
-    <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+    <!-- <link href="{{site.baseurl}}/assets/materialize/fonts/" rel="stylesheet"> -->
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="{{site.baseurl}}/assets/materialize/css/materialize.min.css">
     <!--Let browser know website is optimized for mobile-->
@@ -12,9 +11,7 @@
     <script type="text/javascript" src="https://cdn.mpi-klsb.mpg.de/jquery/3.6.0/jquery-3.6.0.js"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="{{site.baseurl}}/assets/materialize/js/materialize.min.js"></script>
-    <script type="text/javascript" async
-      src="https://cdn.mpi-klsb.mpg.de/mathjax/node_modules/mathjax-full/js/input/asciimath/mathjax2/legacy/MathJax.js?config=TeX-MML-AM_CHTML">
-    </script>
+    <script src="https://cdn.mpi-klsb.mpg.de/mathjax/es5/tex-chtml.js" async></script>
     <link rel="alternate" type="application/rss+xml"  href="{{ site.baseurl }}/feed.xml" title="{{ site.title }}">
     <meta charset="utf-8">
     <title>Heiko Becker</title>
