Small update to about page

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,11 +4,12 @@
   <div class="card">
     <div class="card-content">
       <p>
-        I am a PhD student at MPI-SWS in the group for <em>Automated Verification
+      I am a software engineer at <a href="https://itemis.com">itemis</a>.
+      Before that I did my PhD at MPI-SWS in the group for <em>Automated Verification
           and Approximation</em> lead by
         <a href="https://people.mpi-sws.org/~eva">Eva Darulova</a>.
-        In general I have a strong interest in verified compilation and
-        optimization of floating-point programs, and in ergonomics of
+	During my PhD I have worked on verified compilation and
+        optimization of floating-point programs, and the ergonomics of
         interactive theorem provers.
       </p>
     </div>
