Minor URL update

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
       I am a software engineer at <a href="https://itemis.com">itemis</a>.
       Before that I did my PhD at MPI-SWS in the group for <em>Automated Verification
           and Approximation</em> lead by
-        <a href="https://people.mpi-sws.org/~eva">Eva Darulova</a>.
+        <a href="https://malyzajko.github.io/">Eva Darulova</a>.
 	During my PhD I have worked on verified compilation and
         optimization of floating-point programs, and the ergonomics of
         interactive theorem provers.
