More updated personal info, beautification

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,9 @@
 	We heavily  use the JetBrains MPS language engineering tool.
 	At itemis, part of my work also involves active contribution to our open-source language tooling:
 	the <a href="https://github.com/IETS3/iets3.opensource">IETS3.opensource</a> language collection, and the <a href="https://github.com/mbeddr"> mbeddr platform</a>.
-	Before that I did my PhD at MPI-SWS in the group for <em>Automated Verification and Approximation</em> lead by <a href="https://malyzajko.github.io/">Eva Darulova</a>.
+      </p>
+      <p>
+	Before my work at itemis, I did my PhD at MPI-SWS in the group for <em>Automated Verification and Approximation</em> lead by <a href="https://malyzajko.github.io/">Eva Darulova</a>.
 	During my PhD I have worked on verified compilation and optimization of floating-point programs, and the ergonomics of interactive theorem provers.
 	This website is primarily focused on the research work I have conducted. For my technical contributions, please also see my <a href="https://github.com/HeikoBecker/">GitHub profile</a>.
       </p>
