--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,16 +9,19 @@
     </div>
   </div>
   <h1 class="center-align">{{site.name}}</h1>
-  <h2 class="center-align"> PhD Student </h2>
+  <h2 class="center-align"> DSL Engineer at itemis</h2>
   <p class="center-align">
-  <a href="mailto:hbecker _at_ mpi-sws.org">
+  <!-- <a href="mailto:hbecker _at_ mpi-sws.org">
     <i class="fas fa-at fa-3x"></i>
-  </a>
+  </a>-->
   <a href="https://twitter.com/HeyHeiko">
     <i class="fab fa-twitter fa-3x"></i>
   </a>
-  <a href="https://heikobecker.github.io">
+  <a href="https://github.com/HeikoBecker/">
     <i class="fab fa-github fa-3x"></i>
+  </a>
+  <a href="https://www.linkedin.com/in/heiko-becker/">
+    <i class="fa-brands fa-linkedin"></i>
   </a>
   </p>
   <!-- -->
