Update FontAwesome, text

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,8 +9,9 @@
     </div>
   </div>
   <h1 class="center-align">{{site.name}}</h1>
-  <h2 class="center-align"> DSL Engineer at itemis</h2>
+  <h2 class="center-align"> DSL Engineer</h2>
   <p class="center-align">
+  <!-- icon source: https://fontawesome.com/search -->
   <!-- <a href="mailto:hbecker _at_ mpi-sws.org">
     <i class="fas fa-at fa-3x"></i>
   </a>-->
